[package]
name = "rustformation-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
envoy-proxy-dynamic-modules-rust-sdk = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
matchers = "0.2.0"
minijinja = { version = "2.7.0" }
tempfile = "3.16.0"
anyhow = "1.0.100"
once_cell = "1.21.3"
transformation = { path = "../../lib/transformation" }
envoy-helpers = { path = "../../lib/envoy-helpers" }

[dev-dependencies]
mockall = "0.13.1"
